--- a/src/app/session/landing/landing.page.html
+++ b/src/app/session/landing/landing.page.html
@@ -1,11 +1,8 @@
-
+<ion-content>
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="end">
-      <ion-toggle [(ngModel)]="isEnglish" (ionChange)="toggleLanguage()">
-        <ion-label *ngIf="isEnglish">English</ion-label>
-        <ion-label *ngIf="!isEnglish">हिन्दी</ion-label>
-      </ion-toggle>
+     
     </ion-buttons>
     
     <ion-buttons slot="end"> 
@@ -16,8 +13,10 @@
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content class="ion-padding ion-text-center ion-align-items-center ion-justify-content-center">
 
   <ion-img src="assets/icon/image-gallery-high-resolution-logo.png" alt="Logo" class="logo"></ion-img>
   
+</ion-content>
 </ion-content>
