--- a/src/app/session/sign-in/sign-in.page.html
+++ b/src/app/session/sign-in/sign-in.page.html
@@ -11,7 +11,7 @@
 <ion-content class="ion-padding">
   <div class="center-content">
     
-    <div>
+    <div class="form">
       <ion-item>
         <ion-label position="floating">Email</ion-label>
         <ion-input type="email" [(ngModel)]="email"></ion-input>
