--- a/src/app/session/sign-in/sign-in.page.scss
+++ b/src/app/session/sign-in/sign-in.page.scss
@@ -2,14 +2,16 @@
 
 ion-header {
   ion-toolbar {
+    --background: #212121;
     ion-title {
       font-size: 24px;
+      color: #FFFFFF;
     }
   }
 }
 
 ion-content {
-  --background: black;
+   --background: black;
   .center-content {
     display: flex;
     flex-direction: column;
@@ -18,11 +20,13 @@ ion-content {
     height: 100vh; /* Set the height to full viewport height */
   }
 
-  form {
+  .form {
     border: 1px solid #ccc; /* Add border to the form */
     border-radius: 8px; /* Add border-radius for rounded corners */
-    padding: 20px; /* Add padding to the form */
-    max-width: 300px; /* Set maximum width for the form */
+    padding: 25px; /* Add padding to the form */
+    max-width: 250px; /* Set maximum width for the form */
+    
+   
 
     ion-item {
       ion-label {
@@ -52,6 +56,12 @@ ion-content {
 
     ion-button {
       margin-top: 20px;
+      border-radius: 5px;
+    }
+  }
+  .no-account {
+    p {
+      color: #FFFFFF; 
     }
   }
 }
