Side bar is giving issue

--- a/src/app/home/dashboard/dashboard.page.html
+++ b/src/app/home/dashboard/dashboard.page.html
@@ -5,9 +5,8 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <app-side-bar></app-side-bar>
   <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">dashboard</ion-title>
-    </ion-toolbar>
+    
   </ion-header>
 </ion-content>
