--- a/src/app/home/dashboard/dashboard.page.html
+++ b/src/app/home/dashboard/dashboard.page.html
@@ -1,12 +1,16 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>dashboard</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
   <app-side-bar></app-side-bar>
-  <ion-header collapse="condense">
-    
-  </ion-header>
+
+  <ion-card *ngFor="let newsItem of newsData">
+    <img [src]="newsItem.news_image_signed_url" alt="{{ newsItem.news_title }}" />
+    <ion-card-header>
+      <ion-card-title>{{ newsItem.news_title }}</ion-card-title>
+      <ion-card-subtitle>{{ newsItem.creation_time }}</ion-card-subtitle>
+    </ion-card-header>
+
+    <ion-card-content>
+      {{ newsItem.news_short_description }}
+      <a [href]="newsItem.news_url" target="_blank">Read more</a>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
