Problem regarding visibility of description

--- a/src/app/home/profile/profile.component.html
+++ b/src/app/home/profile/profile.component.html
@@ -1,5 +1,7 @@
-
-<div>
+<ion-content>
   <app-side-bar></app-side-bar>
-  <app-student-profile></app-student-profile>
-</div>
+  <div class="profile-layout">
+    <app-student-profile></app-student-profile>
+  </div>
+</ion-content>
+
