Problem regarding save and delete button

--- a/src/app/home/profile/profile.component.html
+++ b/src/app/home/profile/profile.component.html
@@ -1,7 +1,7 @@
 <ion-content>
   <app-side-bar></app-side-bar>
   <div class="profile-layout">
-    <app-student-profile></app-student-profile>
+   <app-description></app-description>
   </div>
 </ion-content>
 
