--- a/src/app/shared/student-profile/description-edit/description-edit.component.html
+++ b/src/app/shared/student-profile/description-edit/description-edit.component.html
@@ -1,6 +1,15 @@
+<!-- description-edit.component.html -->
+<ion-content>
+  <ion-textarea [(ngModel)]="editedDescription"></ion-textarea>
+  <ion-button (click)="onEditSave()">Save</ion-button>
+  <ion-button (click)="onDelete()">Delete</ion-button>
+</ion-content>
 
+
+
+<!-- 
 <ion-label>Edit Description:</ion-label>
 <ion-input [(ngModel)]="editedDescription" placeholder="Enter new description"></ion-input>
 
 <ion-button (click)="onEditSave()">Save</ion-button>
-<ion-button (click)="onDelete()">Delete</ion-button>
+<ion-button (click)="onDelete()">Delete</ion-button> -->
